Resolves: tdf#101011 atk needs a value for accessible-table-column-header

This presumably became a problem after...

commit 76c549eb01dcb7b5bf28a271ce00e386f3d388ba
Author: Steve Yin <steve_y@apache.org>
Date:   Fri Nov 29 13:03:27 2013 +0000

    Integrate branch of IAccessible2

added a TABLE_COLUMN_HEADER_CHANGED usage which triggered it.

Change-Id: If54b7a39a170566cf7def3548ba385fa5d99bb1c
(cherry picked from commit 9b47a8b21f87fa77d2d61ac4a2c2bbc7c0d67a19)
Reviewed-on: https://gerrit.libreoffice.org/27368
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>